# yagl

./: .gitignore  Cargo.toml  README.md  build.rs
examples/txt/: main.rs
src/: context.rs  game.rs  lib.rs  window.rs
src/graphics/: drawable.rs  gl.rs  graphics.rs  mod.rs  td.rs
src/graphics/graphics/: mod.rs  ms.rs  wg.rs
src/graphics/mesh/: batch.rs  mesh.rs  mod.rs
src/graphics/s2d/: mod.rs  s2d.rs
src/graphics/shaders/: fixed.vert  mod.rs  shader.frag
src/input/: axis.rs  btn.rs  gbtn.rs  key.rs  mbtn.rs  mod.rs
src/sandbox/: mod.rs  s2d.rs
src/tut/: camera.rs  mod.rs  state.rs  uni.rs  vert.rs
src/tut/gfxhal/: hal.rs  mod.rs
src/tut/wgpu/: mod.rs  texture.rs  vert.rs
