[package]
name = "yagl"
version = "0.1.0"
authors = ["Kyumin Kim <math4tots@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.22"
winit = "0.20"
wgpu = "0.5.0"
futures = "0.3.4"
shaderc = "0.6"
bytemuck = "1.2.0"
failure = "0.1.8"
cgmath = "0.17"
anyhow = "1.0"
gfx-hal = "0.5.2"
log = "0.4.8"
simple_logger = "1.6.0"

[target.'cfg(target_os = "macos")'.dependencies.gfx-backend-metal]
version = "0.5.2"

[target.'cfg(target_os = "windows")'.dependencies.gfx-backend-dx12]
version = "0.5.2"

[target.'cfg(target_os = "linux")'.dependencies.gfx-backend-vulkan]
version = "0.5.2"

[build-dependencies]
shaderc = "0.6"
