[package]
name = "yagl"
version = "0.1.0"
authors = ["Kyumin Kim <math4tots@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
a2d = "0.1.4"
anyhow = "1.0"
bytemuck = "1.2.0"
cgmath = "0.17"
futures = "0.3.4"
image = "0.22"
log = "0.4.8"
shaderc = "0.6"
simple_logger = "1.6.0"

[build-dependencies]
shaderc = "0.6"
