[package]
name = "yagl"
version = "0.0.9"
authors = ["Kyumin Kim <math4tots@users.noreply.github.com>"]
edition = "2018"
license = "Apache-2.0"
repository = "https://github.com/math4tots/yagl"
description = "Yet Another Game Library"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
a2d = "0.1.8"
anyhow = "1.0"
futures = "0.3.4"
gilrs = "0.7.4"
